--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
-
+@import url(./utilities/_varialbles.scss);
+@import url(./base/_reset.scss);
+@import url(./base/_typography.scss);
+@import url(./layout/_footer.scss);
 
 /*# sourceMappingURL=main.css.map */
