--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,6 @@
-@import url(./utilities/_varialbles.scss);
-@import url(./base/_reset.scss);
-@import url(./base/_typography.scss);
-@import url(./layout/_footer.scss);
-@import url(./layout/_footer.scss);
+@import"utilities/variables";
+@import "base/reset";
+@import"layout/footer";
+
+
+
